--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  display: flex;
+  justify-content: center;
 }
 
 .App-logo {
@@ -37,6 +39,14 @@
   }
 }
 
+/* my rules */
+
+#contentView {
+  align-items: center;
+  justify-content: space-around;
+  background-color: skyblue;
+}
+
 .navigate {
   background-color: aqua
 }
@@ -47,4 +57,11 @@
 
 .previous:hover {
   background-color: yellow
+}
+
+.confirm {
+  justify-content: center;
+  max-width: 40vw;
+  background-color: gold;
+  font-family: 'Times New Roman', Times, serif;
 }
